Se incorpora al Menú Principal BinToEstadoEquipo, así cómo los elementos para construir todo lo referente a él

--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -132,6 +132,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BinToEstadoEquipoController.cs" />
     <Compile Include="Controllers\CamionController.cs" />
     <Compile Include="Controllers\CargaMasivaController.cs" />
     <Compile Include="Controllers\ClasificacionController.cs" />
@@ -166,6 +167,7 @@
     <Content Include="Content\img\Caja.png" />
     <Content Include="Content\img\Caja.svg" />
     <Content Include="Content\img\producto.png" />
+    <Content Include="Content\js\BinToEstadoEquipo.js" />
     <Content Include="Content\js\Enlaces.js" />
     <Content Include="Content\js\Solicitud.js" />
     <Content Include="Content\js\Existencia.js" />
@@ -2531,6 +2533,8 @@
     <Content Include="Views\Enlaces\Index.cshtml" />
     <Content Include="Views\Enlaces\Enlaces.cshtml" />
     <Content Include="Views\Solicitud\Solicitud.cshtml" />
+    <Content Include="Views\BinToEstadoEquipo\BinToEstadoEquipo.cshtml" />
+    <Content Include="Views\BinToEstadoEquipo\Init.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
