--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -2533,6 +2533,8 @@
     <Content Include="Views\Solicitud\Solicitud.cshtml" />
     <Content Include="Views\Solicitud\Detalle.cshtml" />
     <Content Include="Views\CargaMasiva\CargaMasiva.cshtml" />
+    <Content Include="Views\CargaMasiva\CargaMasivaDetalle.cshtml" />
+    <Content Include="Views\CargaMasiva\CargaMasivaDetalleProducto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
