--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -2538,6 +2538,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Archivos\" />
     <Folder Include="Content\librerias\metronic\assets\app\media\img\logos\logos-login\" />
     <Folder Include="Content\librerias\metronic\assets\vendors\base\fonts\font-awesome\" />
     <Folder Include="Content\librerias\metronic\assets\vendors\base\images\malihu-custom-scrollbar-plugin\" />
