--- a/3 - Proyecto/Despacho/Datos/Datos.csproj
+++ b/3 - Proyecto/Despacho/Datos/Datos.csproj
@@ -10,5 +10,6 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
 </Project>
