--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -2476,6 +2476,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\js\externos\bootstrap.js" />
     <Content Include="Content\js\externos\bootstrap.min.js" />
+    <Content Include="Content\Archivos\Carga Masiva.xlsx" />
     <None Include="Content\js\externos\jquery-3.4.1.intellisense.js" />
     <Content Include="Content\js\externos\jquery-3.4.1.js" />
     <Content Include="Content\js\externos\jquery-3.4.1.min.js" />
@@ -2543,7 +2544,6 @@
     <Content Include="Views\Existencia\Bodega.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\Archivos\" />
     <Folder Include="Content\librerias\metronic\assets\app\media\img\logos\logos-login\" />
     <Folder Include="Content\librerias\metronic\assets\vendors\base\fonts\font-awesome\" />
     <Folder Include="Content\librerias\metronic\assets\vendors\base\images\malihu-custom-scrollbar-plugin\" />
