--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -2471,6 +2471,9 @@
     <Content Include="Content\librerias\metronic\snippets\pages\user\login-6.html" />
     <Content Include="Content\librerias\XLS\jszip.js" />
     <Content Include="Content\librerias\XLS\xlsx.js" />
+    <Content Include="Content\webfonts\fa-brands-400.svg" />
+    <Content Include="Content\webfonts\fa-regular-400.svg" />
+    <Content Include="Content\webfonts\fa-solid-900.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -2539,6 +2542,18 @@
     <Content Include="Views\Solicitud\Secciones\SeccionDocumentacion.cshtml" />
     <Content Include="Views\Solicitud\Secciones\SeccionConcrecion.cshtml" />
     <Content Include="Views\Solicitud\Secciones\SeccionAprobacion.cshtml" />
+    <Content Include="Content\webfonts\fa-brands-400.eot" />
+    <Content Include="Content\webfonts\fa-brands-400.ttf" />
+    <Content Include="Content\webfonts\fa-brands-400.woff" />
+    <Content Include="Content\webfonts\fa-brands-400.woff2" />
+    <Content Include="Content\webfonts\fa-regular-400.eot" />
+    <Content Include="Content\webfonts\fa-regular-400.ttf" />
+    <Content Include="Content\webfonts\fa-regular-400.woff" />
+    <Content Include="Content\webfonts\fa-regular-400.woff2" />
+    <Content Include="Content\webfonts\fa-solid-900.eot" />
+    <Content Include="Content\webfonts\fa-solid-900.ttf" />
+    <Content Include="Content\webfonts\fa-solid-900.woff" />
+    <Content Include="Content\webfonts\fa-solid-900.woff2" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <Content Include="Views\Existencia\Bodega.cshtml" />
   </ItemGroup>
