Corrección URL y Cambio de Less por CSS

--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -159,10 +159,30 @@
     <None Include="AppSettings.config" />
     <Content Include="AppSettings.txt" />
     <Content Include="Content\Consultas\Grandiosa.txt" />
+    <Content Include="Content\css\camion.css" />
+    <Content Include="Content\css\cargaMasiva.css" />
+    <Content Include="Content\css\clasificacion.css" />
+    <Content Include="Content\css\cliente.css" />
+    <Content Include="Content\css\empresatransporte.css" />
+    <Content Include="Content\css\estadoequipo.css" />
+    <Content Include="Content\css\existencia.css" />
     <Content Include="Content\css\externos\bootstrap-theme.css" />
     <Content Include="Content\css\externos\bootstrap-theme.min.css" />
     <Content Include="Content\css\externos\bootstrap.css" />
     <Content Include="Content\css\externos\bootstrap.min.css" />
+    <Content Include="Content\css\general.css" />
+    <Content Include="Content\css\gerencia.css" />
+    <Content Include="Content\css\home.css" />
+    <Content Include="Content\css\login.css" />
+    <Content Include="Content\css\perfil.css" />
+    <Content Include="Content\css\personal.css" />
+    <Content Include="Content\css\prioridad.css" />
+    <Content Include="Content\css\solicitud.css" />
+    <Content Include="Content\css\tipodocumento.css" />
+    <Content Include="Content\css\tiposolicitud.css" />
+    <Content Include="Content\css\unidadmedida.css" />
+    <Content Include="Content\css\unidadnegocio.css" />
+    <Content Include="Content\css\usuarios.css" />
     <Content Include="Content\img\Caja.png" />
     <Content Include="Content\img\Caja.svg" />
     <Content Include="Content\img\producto.png" />
